[gd_scene load_steps=9 format=3 uid="uid://bi3u4r6dt41tn"]

[ext_resource type="Script" path="res://main.gd" id="1_dt5im"]
[ext_resource type="PackedScene" uid="uid://dioeauotuq6w7" path="res://play_area.tscn" id="2_g3keb"]
[ext_resource type="PackedScene" uid="uid://fxs1mxkaxgnw" path="res://enemy.tscn" id="2_outg6"]
[ext_resource type="PackedScene" uid="uid://xmjned2qqjfs" path="res://hud.tscn" id="4_5iln8"]
[ext_resource type="FontFile" uid="uid://7mcfalm6f4b2" path="res://Xolonium-Regular.ttf" id="5_6a84f"]
[ext_resource type="PackedScene" uid="uid://di2pjj1foslsq" path="res://gameover_hud.tscn" id="6_0v53d"]

[sub_resource type="InputEventAction" id="InputEventAction_py8ey"]
action = &"press_space"

[sub_resource type="Shortcut" id="Shortcut_7314w"]
events = [SubResource("InputEventAction_py8ey")]

[node name="Main" type="Node2D"]
script = ExtResource("1_dt5im")
enemy_scene = ExtResource("2_outg6")

[node name="Background" type="ColorRect" parent="."]
offset_right = 790.0
offset_bottom = 1100.0
color = Color(0.74902, 0.580392, 0.894118, 1)

[node name="Wall1" type="ColorRect" parent="Background"]
layout_mode = 0
offset_left = 45.0
offset_right = 50.0
offset_bottom = 1000.0
color = Color(0, 0, 0, 1)

[node name="Wall2" type="ColorRect" parent="Background"]
layout_mode = 0
offset_left = 150.0
offset_right = 155.0
offset_bottom = 1000.0
color = Color(0, 0, 0, 1)

[node name="Wall3" type="ColorRect" parent="Background"]
layout_mode = 0
offset_left = 255.0
offset_right = 260.0
offset_bottom = 1000.0
color = Color(0, 0, 0, 1)

[node name="Wall4" type="ColorRect" parent="Background"]
layout_mode = 0
offset_left = 360.0
offset_right = 365.0
offset_bottom = 1000.0
color = Color(0, 0, 0, 1)

[node name="Wall5" type="ColorRect" parent="Background"]
layout_mode = 0
offset_left = 465.0
offset_right = 470.0
offset_bottom = 1000.0
color = Color(0, 0, 0, 1)

[node name="PlayArea1" parent="." instance=ExtResource("2_g3keb")]
position = Vector2(50, 1000)

[node name="PlayArea2" parent="." instance=ExtResource("2_g3keb")]
position = Vector2(155, 1000)

[node name="PlayArea3" parent="." instance=ExtResource("2_g3keb")]
position = Vector2(260, 1000)

[node name="PlayArea4" parent="." instance=ExtResource("2_g3keb")]
position = Vector2(365, 1000)

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="HUD" parent="." instance=ExtResource("4_5iln8")]

[node name="IframeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PauseButton" type="Button" parent="."]
process_mode = 2
offset_left = 173.0
offset_top = 502.0
offset_right = 343.0
offset_bottom = 562.0
theme_override_fonts/font = ExtResource("5_6a84f")
theme_override_font_sizes/font_size = 32
shortcut = SubResource("Shortcut_7314w")
text = "Paused"

[node name="GameoverHUD" parent="." instance=ExtResource("6_0v53d")]

[connection signal="area_entered" from="PlayArea1" to="." method="_on_play_area_1_area_entered"]
[connection signal="area_exited" from="PlayArea1" to="." method="_on_play_area_1_area_exited"]
[connection signal="area_entered" from="PlayArea2" to="." method="_on_play_area_2_area_entered"]
[connection signal="area_exited" from="PlayArea2" to="." method="_on_play_area_2_area_exited"]
[connection signal="area_entered" from="PlayArea3" to="." method="_on_play_area_3_area_entered"]
[connection signal="area_exited" from="PlayArea3" to="." method="_on_play_area_3_area_exited"]
[connection signal="area_entered" from="PlayArea4" to="." method="_on_play_area_4_area_entered"]
[connection signal="area_exited" from="PlayArea4" to="." method="_on_play_area_4_area_exited"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="starting" from="GameoverHUD" to="." method="new_game"]
